Fixed Overlap issue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -244,7 +244,8 @@ section{
             transition: all .4s ease-in-out;
             z-index: -1;
             transform: translate(-50%,-50%);
-            
+            font-weight: 800;
+            font-size: 6.3rem;
 
         }
     }
